--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "next": "15.5.6",
     "react": "19.1.0",
     "react-dom": "19.1.0",
+    "react-fast-marquee": "^1.6.5",
     "tailwind-merge": "^3.4.0"
   },
   "devDependencies": {
